libraries/mark5access/trunk/python/mark5access/mark5access.py

mark5_library_setoption.restype = c_int
mark5_library_setoption.argtypes = [c_int, c_void_p]
mark5_stream_next_frame = _libraries['libmark5access.so'].mark5_stream_next_frame
mark5_stream_next_frame.restype = c_int
mark5_stream_next_frame.argtypes = [POINTER(mark5_stream)]
mark5_stream_open = _libraries['libmark5access.so'].mark5_stream_open
mark5_stream_open.restype = POINTER(mark5_stream)
mark5_stream_open.argtypes = [STRING, c_int, c_int, c_longlong]
__all__ = ['mark5_stream_next_frame', 'new_mark5_format_mark4',
           'blanker_mark5', 'mark5_stream_open',
           'mark5_stream_count_high_states', 'MK5_FORMAT_KVN5B',
           'new_mark5_stream_unpacker', 'mark5_library_getoption',
           'mark5_stream', 'mark5_format', 'MK5_FORMAT_CODIF',
           'mark5_library_init', 'mark5_unpack_with_offset',
           'int64_t', 'mark5_format_vdif_set_leapsecs',
           'new_mark5_format_vlba_nomod', 'delete_mark5_format',
           'MK5_FORMAT_MARK4', 'Mark5Blanker',
           'mark5_stream_get_sample_time', 'mark5_unpack',
           'mark5_format_generic', 'new_mark5_format_vlba',
           'delete_mark5_format_generic', 'MK5_BLANKER_NONE',
           'new_mark5_format_d2k', 'new_mark5_stream_memory',
           'MK5_BLANKER_CODIF', 'mark5_stream_fix_mjd',
           'new_mark5_format_mark5b', 'mark5_format_generic_print',
           'new_mark5_format_from_name', 'MK5_FORMAT_UNKNOWN',
           'new_mark5_format_from_stream', 'decodeFunc',
           'MK5_BLANKER_VDIF', 'print_mark5_format',
           'mark5_stream_seek', 'mark5_stream_file_add_infile',
           'new_mark5_stream_absorb', 'new_mark5_stream_file',
           'mark5_stream_print', 'MK5_FORMAT_VDIFL',
           'mark5_stream_list_formats', 'delete_mark5_stream_generic',
           'MK5_FORMAT_D2K', 'delete_mark5_stream',
           'new_mark5_stream', 'MK5_FORMAT_VDIFB', 'MK5_FORMAT_VDIF',
           'MK5_FORMAT_K5', 'mark5_stream_generic', 'countFunc',
           'mark5_library_setoption',
           'new_mark5_format_generic_from_string',
           'MK5_BLANKER_MARK5', 'mark5_stream_copy', 'Mark5Format',
           'mark5_stream_decode', 'MK5_FORMAT_VLBN',
           'mark5_stream_resync', 'mark5_stream_decode_double',
           'MK5_FORMAT_MARK5B', 'mark5_stream_set_blanker',
           'new_mark5_format_kvn5b', 'MK5_FORMAT_VLBA',
           'mark5_stream_get_frame_time']
